--- a/coreg.html
+++ b/coreg.html
@@ -171,12 +171,12 @@
   <!-- Navigation Bar Ends -->
 </header>
 <!-- Header section ends -->
- <section class="banner position-relative pb-0">
+ <section class="banner position-relative pb-0 " style="height: 911px;">
     <div class="overlay">
     </div>
     <div class="container">
       <div class="inner-banner position-relative text-white ">
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="banner-left text-center pb-lg-5 p-md-0">
               <div class="banner-image">
@@ -206,10 +206,10 @@
                 <div class="banner-button">
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
-                      <a class="btn me-3 my-1 w-100" href="book-now.html">PURCHASE TICKET</a>
+                      <a class="btn me-3 my-1 w-100" href="offerwall.html">PURCHASE TICKET</a>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                      <a class="btn btn2 my-1 w-100" href="event_list.html">VIEW SCHEDULE</a>
+                      <a class="btn btn2 my-1 w-100" href="offerwall.html">VIEW SCHEDULE</a>
                     </div> 
                   </div>
                 </div>
