--- a/prereg.html
+++ b/prereg.html
@@ -219,7 +219,7 @@
                   anim id est laborum.</p>
               </div>
               <div class="form-content justify-content-between">
-                <form>
+                <form action="coreg.html">
                   <input type="text" placeholder="Full Name" class="mb-5">
                   <div class=" row justify-content-around">
                     <div class="col-lg-6 col-md-6">
@@ -245,29 +245,14 @@
         <div class="feature-lists pt-8 pb-8">
           <div class="row g-4">
             <div class="col-lg-4 col-md-6">
-              <div class="feature-box py-7 px-6 rounded text bg-black bg-opacity-25">
+              <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
                   <div class="feature-box-icon mb-4">
-                    <i class="fa fa-address-book-o text-white bg-pink rounded-circle text-center"></i>
-                  </div>
-                  <div class="feature-box-info ">
-                    <h5 class="text-white mb-2">LIVE STREAMING</h5>
-                    <small class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore.</small>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="feature-box py-7 px-6 rounded  bg-black bg-opacity-25">
-                <a>
-                  <div class="feature-box-icon mb-4">
-                    <i class="fa fa-comments text-white bg-pink rounded-circle text-center"></i>
+                    <i class="fa fa-gift text-white bg-pink rounded-circle text-center"></i>
                   </div>
                   <div class="feature-box-info">
-                    <h5 class="text-white mb-2">FIRESIDE CHATS</h5>
-                    <small class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore.</small>
+                    <h5 class="text-white mb-2">EXCITING GIVEAWAYS</h5>
+                    <small class="text-white">Win daily rewards, gift cards, gadgets, and luxury prizes tailored for you.</small>
                   </div>
                 </a>
               </div>
@@ -276,12 +261,24 @@
               <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
                 <a>
                   <div class="feature-box-icon mb-4">
-                    <i class="fa fa-desktop text-white bg-pink rounded-circle text-center"></i>
+                    <i class="fa fa-lock text-white bg-pink rounded-circle text-center"></i>
                   </div>
                   <div class="feature-box-info">
-                    <h5 class="text-white mb-2">NETWORKING</h5>
-                    <small class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore.</small>
+                    <h5 class="text-white mb-2">SECURE & TRUSTED</h5>
+                    <small class="text-white">Your data and entries are protected with top-level security and transparency.</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
+                <a>
+                  <div class="feature-box-icon mb-4">
+                    <i class="fa fa-globe text-white bg-pink rounded-circle text-center"></i>
+                  </div>
+                  <div class="feature-box-info">
+                    <h5 class="text-white mb-2">GLOBAL PARTICIPATION</h5>
+                    <small class="text-white">Join from anywhere in the world and access sweepstakes across multiple categories.</small>
                   </div>
                 </a>
               </div>
