--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zxx">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Contact-Eventen</title>
+  <title>Privacy Policy - Dealtoair</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,11 +15,8 @@
   <!--Custom CSS-->
   <link rel="stylesheet" href="css/styles.css">
 
-
   <!--FontAwesome CSS-->
   <link rel="stylesheet" href="icons/font-awesome.min.css">
-
-  
 </head>
 <body>
 <!--Header Section start-->
@@ -199,120 +196,133 @@
 
 <!-- Bannner section starts -->
 <section class="banner page-banner position-relative pb-0">
-  <div class="overlay">
-  </div>
+  <div class="overlay"></div>
   <div class="container">
     <div class="page-title text-center position-relative py-11">
-     <h2 class="text-white">Conact Us</h2>
+      <h2 class="text-white">Privacy Policy</h2>
     </div> 
   </div>
 </section>
 <!--Banner Section end--> 
 
-<!--Contact Section end--> 
-<section class="contact">
+<!-- Privacy Policy Section Start -->
+<section class="privacy-policy py-6">
   <div class="container">
-    <div class="contact-inner text-center text-md-start">
-      <div class="row g-md-5 gy-5 align-items-center">
-        <div class="col-lg-4 col-md-5">
-          <div class="contact-event-info p-8 text-white h-100 rounded bg-pink">
-            <div class="event-venue pb-5">
-              <h5 class="text-white pb-2">EVENT VENUE:</h5>
-              <p class="m-0">Galleria mall conference center</p>
-            </div>
-            <div class="address pb-5">
-              <h5 class="text-white pb-2">ADDRESS:</h5>
-              <p class="m-0">19 By Pass NR, Bali, Indonesia, BC 22196</p>
-            </div> 
-            <div class="reception-info pb-5">
-              <h5 class="text-white pb-2">RECEPTION INFO:</h5>
-              <p class="m-0">Booking: (+62) 1919-2020</p>
-            </div>
-            <div class="ticket-info pb-5">
-              <h5 class="text-white pb-2">Ticket INFO:</h5>
-              <p class="m-0">Booking: (+62) 1919-2020</p>
-              <p class="m-0">Email: eventen@mail.com</p>
-            </div>
-            <div class="direction-link">
-              <a>Get Directions</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-8 col-md-7">
-          <div class="contact-form">
-            <div class="form-title mb-4">
-              <h2 class="mb-1">Drop a <span class="pink">line</span></h2>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div class="form">
-              <form>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <input type="text" placeholder="Name" class="mb-3">
-                  </div>
-                  <div class="col-lg-6 ">
-                    <input  type="email" placeholder="Email" class="mb-3" required>
-                  </div>
-                </div>
-                <div class="phone-no">
-                  <input type="tel" placeholder="Phone No." class="mb-3">
-                </div>
-                <div class="subject">
-                  <input type="text" placeholder="Subject" class="mb-3">
-                </div>
-                <div class="message">
-                  <textarea placeholder="Message" rows="4" class="mb-3"></textarea>
-                </div>
-                <a class="btn">Send Message<i class="fa fa-long-arrow-right ms-3"></i></a>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="map-direction mt-5">
-        <iframe height="400" class="rounded w-100" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=+(mangal%20bazar)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-      </div>
-    </div>
-  </div>
-</section>
-<!--Contact Section end--> 
+    <div class="inner-content mx-auto" style="max-width: 900px;">
+      
+      <p class="text-center text-muted mb-5"><em>Your privacy is our top priority</em></p>
 
-<!--Subscribe Section start-->
-<section class="subscribe py-4">
-  <div class="container">
-    <div class="subscribe-content">
-      <div class="row">
-        <div class="col-lg-6 align-self-center ">
-          <div class="sub-left text-center text-lg-start py-2">
-            <h4 class="text-white ">DON'T MISS OUR FUTURE UPDATES! GET SUBSCRIBED TODAY!</h4>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="sub-right py-2">
-            <p class="text-white mb-4 text-center text-lg-start"> Excepteur sint occaecat cupidatat non proident, sunt
-              in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="row gy-3">
-              <div class="col-lg-8 col-md-8 ">
-                <div class="sub-email">
-                  <input type="email" placeholder="Email" required>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4">
-                <div class="sub-button">
-                  <button class="btn btn3 w-100">SUBSCRIBE</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <p>
+        This Privacy Policy explains how <strong>Dealtoair</strong> (“we,” “our,” or “us”) collects, uses, shares, and protects the information you provide when using our website <strong>dealtoair.com</strong> (“the Site”). 
+        This policy applies solely to information gathered through this Site and not to third-party websites linked from here.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Information We Collect and How We Use It</h3>
+      <p>
+        We collect personal information you provide when requesting products or services through the Site. 
+        For example, when seeking quotes, you may be asked for details such as your full name, address, telephone number, email, and other relevant information. 
+        This helps us connect you with service providers and agents.
+      </p>
+      <p>
+        We may also collect demographic data (such as gender or zip code) that is not tied to your personal identity. 
+        Additionally, we may receive supplemental information about you from other online or offline sources and link it with your existing account.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Information Sharing and Disclosure</h3>
+      <ul>
+        <li><strong>Quote Requests:</strong> If you request quotes on the Site, the details you provide may be shared with our trusted network of carriers, agents, lead aggregators, and service providers to fulfill your request. These partners may contact you by phone, email, SMS/text, or mail—even if you are on a national or state “Do Not Call” list.</li>
+        <li><strong>Aggregate Data:</strong> We may share non-personal, aggregated, or de-identified information with third parties for purposes such as targeted advertising and performance analysis.</li>
+        <li><strong>Legal Requirements:</strong> Your information may be disclosed if required by law, such as in response to subpoenas, audits, investigations, or other legal proceedings.</li>
+        <li><strong>Business Transfers:</strong> If Dealtoair merges with or is acquired by another company, your data may be transferred as part of that transaction.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Cookies and IP Addresses</h3>
+      <p>
+        We use cookies to enhance your browsing experience by reducing page load times, personalizing your journey, and tracking site usage. Cookies may also help deliver targeted advertising.
+        We also log IP addresses for system administration, fraud detection, and tracking overall site performance.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Emails & SMS Communication</h3>
+      <p>
+        By registering on our site or through a partner, you may receive promotional emails or newsletters from us. You can opt out anytime by clicking the unsubscribe link.
+      </p>
+      <p>
+        We also offer an SMS service, where you may receive promotional or service-related text messages. Standard carrier charges may apply. By opting in, you confirm you are the authorized user of the device.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Data Security</h3>
+      <p>
+        Your personal information is protected with physical, electronic, and procedural safeguards in compliance with federal standards. 
+        Access is restricted to authorized personnel only.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">California Consumer Privacy Act (CCPA) Rights</h3>
+      <p>If you are a California resident, you have specific rights under the CCPA, including:</p>
+      <ul>
+        <li>The right to know what personal data is collected and how it is used.</li>
+        <li>The right to know whether your data is sold or disclosed, and to whom.</li>
+        <li>The right to opt-out of data sales.</li>
+        <li>The right to access and request deletion of your personal data.</li>
+        <li>The right to equal service, even if you exercise your privacy rights.</li>
+        <li>The right to designate an authorized agent to make requests on your behalf.</li>
+      </ul>
+      <p>To make a CCPA request, contact us at <strong>312-212-0044</strong>.</p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Categories of Data We Collect</h3>
+      <ul>
+        <li><strong>Identifiers:</strong> Name, email, postal address, phone number, IP address, etc.</li>
+        <li><strong>Customer Records:</strong> Social Security numbers, driver’s license details, financial info, etc.</li>
+        <li><strong>Demographic Data:</strong> Age, gender, or protected classifications.</li>
+        <li><strong>Internet Activity:</strong> Browsing history, interactions with our website, search activity, etc.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Use of Personal Information</h3>
+      <p>We use the collected data to:</p>
+      <ul>
+        <li>Fulfill your requests for quotes, offers, and services.</li>
+        <li>Provide marketing messages (email, SMS, direct mail, telemarketing).</li>
+        <li>Improve and personalize your browsing experience.</li>
+        <li>Deliver targeted advertising and measure campaign performance.</li>
+        <li>Respond to inquiries and provide customer service.</li>
+        <li>Comply with legal and regulatory requirements.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Sharing Personal Information</h3>
+      <p>
+        We may share your data with affiliates, trusted service providers, third parties offering relevant products or services, and marketing partners who provide analytics, campaigns, or advertising solutions.
+        Dealtoair does not knowingly collect or sell data of users under 18 years of age.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Third-Party Links</h3>
+      <p>
+        Our Site may contain links to third-party websites. These websites have their own privacy policies, and Dealtoair is not responsible for their practices.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Children’s Privacy</h3>
+      <p>
+        You must be 18 years or older to use our Site. We do not knowingly collect personal data from users under 18.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Data Retention</h3>
+      <p>
+        We are required to retain certain personal data for regulatory compliance and cannot delete such records upon request.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">Policy Updates</h3>
+      <p>
+        We may update this Privacy Policy periodically. Any material changes will be posted here. 
+        Continued use of our Site after updates means you accept the revised policy.
+      </p>
+
     </div>
   </div>
 </section>
-<!--Subscribe Section end-->
+<!-- Privacy Policy Section End -->
+
+
 
 <!--Footer Section start-->
-<footer class="pt-9 text-center text-white position-relative z-1">
+  <footer class="pt-9 text-center text-white position-relative z-1">
     <div class="overlay z-n1 start-0"></div>
     <div class="container">
       <div class="footer-content w-lg-50 m-auto">
@@ -354,18 +364,18 @@
       </div>
     </div>
   </footer>
-<!--Footer Section end-->  
+  <!--Footer Section end-->
 
-<!--Bacl-to-top Button start-->
+  <!--Bacl-to-top Button start-->
   <div id="back-to-top">
     <a href="#" class="bg-pink position-relative align-items-center rounded-circle d-block"></a>
   </div>
-<!--Bacl-to-top Button end-->
+  <!--Bacl-to-top Button end--> 
 
-    <script src="js/jquery-3.7.1.min.js"></script>  
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/custom-nav.js"></script>
-    <script src="js/plugin.js"></script>
-    <script src="js/main.js"></script>
+<script src="js/jquery-3.7.1.min.js"></script>  
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/custom-nav.js"></script>
+<script src="js/plugin.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
