--- a/terms.html
+++ b/terms.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="zxx">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Contact-Eventen</title>
+  <title>Privacy Policy - Dealtoair</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,11 +15,8 @@
   <!--Custom CSS-->
   <link rel="stylesheet" href="css/styles.css">
 
-
   <!--FontAwesome CSS-->
   <link rel="stylesheet" href="icons/font-awesome.min.css">
-
-  
 </head>
 <body>
 <!--Header Section start-->
@@ -197,122 +194,116 @@
   </header>
 <!-- Header section ends -->
 
-<!-- Bannner section starts -->
+<!-- Banner section starts -->
 <section class="banner page-banner position-relative pb-0">
-  <div class="overlay">
-  </div>
+  <div class="overlay"></div>
   <div class="container">
     <div class="page-title text-center position-relative py-11">
-     <h2 class="text-white">Conact Us</h2>
+      <h2 class="text-white">Terms & Conditions</h2>
     </div> 
   </div>
 </section>
 <!--Banner Section end--> 
 
-<!--Contact Section end--> 
-<section class="contact">
+<!-- Terms Section Start -->
+<section class="terms py-6">
   <div class="container">
-    <div class="contact-inner text-center text-md-start">
-      <div class="row g-md-5 gy-5 align-items-center">
-        <div class="col-lg-4 col-md-5">
-          <div class="contact-event-info p-8 text-white h-100 rounded bg-pink">
-            <div class="event-venue pb-5">
-              <h5 class="text-white pb-2">EVENT VENUE:</h5>
-              <p class="m-0">Galleria mall conference center</p>
-            </div>
-            <div class="address pb-5">
-              <h5 class="text-white pb-2">ADDRESS:</h5>
-              <p class="m-0">19 By Pass NR, Bali, Indonesia, BC 22196</p>
-            </div> 
-            <div class="reception-info pb-5">
-              <h5 class="text-white pb-2">RECEPTION INFO:</h5>
-              <p class="m-0">Booking: (+62) 1919-2020</p>
-            </div>
-            <div class="ticket-info pb-5">
-              <h5 class="text-white pb-2">Ticket INFO:</h5>
-              <p class="m-0">Booking: (+62) 1919-2020</p>
-              <p class="m-0">Email: eventen@mail.com</p>
-            </div>
-            <div class="direction-link">
-              <a>Get Directions</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-8 col-md-7">
-          <div class="contact-form">
-            <div class="form-title mb-4">
-              <h2 class="mb-1">Drop a <span class="pink">line</span></h2>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div class="form">
-              <form>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <input type="text" placeholder="Name" class="mb-3">
-                  </div>
-                  <div class="col-lg-6 ">
-                    <input  type="email" placeholder="Email" class="mb-3" required>
-                  </div>
-                </div>
-                <div class="phone-no">
-                  <input type="tel" placeholder="Phone No." class="mb-3">
-                </div>
-                <div class="subject">
-                  <input type="text" placeholder="Subject" class="mb-3">
-                </div>
-                <div class="message">
-                  <textarea placeholder="Message" rows="4" class="mb-3"></textarea>
-                </div>
-                <a class="btn">Send Message<i class="fa fa-long-arrow-right ms-3"></i></a>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="map-direction mt-5">
-        <iframe height="400" class="rounded w-100" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=+(mangal%20bazar)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-      </div>
-    </div>
-  </div>
-</section>
-<!--Contact Section end--> 
+    <div class="inner-content mx-auto" style="max-width: 900px;">
+      
+      <!-- <h1 class="text-center mb-4 fw-bold">Terms and Conditions</h1> -->
+      <p class="text-center text-muted mb-5"><em>Updated: 03/08/2023</em></p>
 
-<!--Subscribe Section start-->
-<section class="subscribe py-4">
-  <div class="container">
-    <div class="subscribe-content">
-      <div class="row">
-        <div class="col-lg-6 align-self-center ">
-          <div class="sub-left text-center text-lg-start py-2">
-            <h4 class="text-white ">DON'T MISS OUR FUTURE UPDATES! GET SUBSCRIBED TODAY!</h4>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="sub-right py-2">
-            <p class="text-white mb-4 text-center text-lg-start"> Excepteur sint occaecat cupidatat non proident, sunt
-              in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="row gy-3">
-              <div class="col-lg-8 col-md-8 ">
-                <div class="sub-email">
-                  <input type="email" placeholder="Email" required>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4">
-                <div class="sub-button">
-                  <button class="btn btn3 w-100">SUBSCRIBE</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <p>
+        This Agreement outlines the Terms and Conditions governing your access to and use of <strong>Dealtoair’s</strong> online services (the “Online Services”) and any related content or materials (the “Materials”).
+      </p>
+      <p>
+        By accessing or using these Online Services and Materials, you agree to be bound by these Terms and Conditions. 
+        If you do not agree, please discontinue use immediately. If you do not have the legal authority to bind yourself, 
+        please select the “I do not accept” option. Misuse or inconsistent use of the Online Services may result in termination 
+        of your access by Dealtoair (“the Company”) and potential legal action.
+      </p>
+      <p>
+        The Company may amend these Terms at any time, with modifications taking effect immediately upon posting. 
+        It is your responsibility to review these Terms regularly, and your continued use will be deemed acceptance of any changes.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">1. Authorized Communications & Information You Provide</h3>
+      <ul>
+        <li>By using our Online Services, you consent to receive communication from Dealtoair and its partners via email, telephone, postal mail, or other channels.</li>
+        <li>While using the Online Services, you may be asked to provide personal information. By doing so, you expressly consent to Dealtoair’s collection, use, and disclosure of this information in accordance with our Privacy Policy.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">2. Mandatory Arbitration</h3>
+      <p>
+        These Terms include a Mandatory Arbitration Provision requiring disputes to be resolved individually through arbitration, not in court. 
+        You waive your right to class actions or multi-party arbitration. If you provided consent to be contacted via telemarketing or SMS/text messages, 
+        any related claims are subject to this arbitration clause.
+      </p>
+      <p>
+        You may opt out of arbitration by submitting written notice within 30 days of registering with Dealtoair.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">3. License & Usage Restrictions</h3>
+      <ul>
+        <li>You may not distribute, reproduce, or create derivative works from the Online Services or Materials without written permission.</li>
+        <li>You are granted a limited, nonexclusive, nontransferable license to display Materials to one person at a time and make authorized printouts for personal use.</li>
+        <li>All intellectual property rights remain with Dealtoair and affiliates; no ownership rights are transferred.</li>
+        <li>You must not use the Online Services in a way that infringes copyrights, trademarks, or proprietary rights.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">4. Access to Services</h3>
+      <ul>
+        <li>Only registered users may access Online Services.</li>
+        <li>Credentials issued in one country may not be used in another.</li>
+        <li>Dealtoair may add, modify, or remove features and Materials without notice.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">5. Company Representations & Limited Warranty</h3>
+      <ul>
+        <li>Dealtoair represents that it has the authority to provide these services.</li>
+        <li>Compliance with CAN-SPAM Act and applicable laws is maintained.</li>
+        <li>No guarantee is made regarding third-party content, advertising, or earnings claims.</li>
+        <li>Testimonials are the responsibility of third parties, and Dealtoair does not guarantee their accuracy.</li>
+        <li>Except as outlined, services are provided “as is” and “as available.”</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">6. Customer Representations & Warranties</h3>
+      <ul>
+        <li>You agree not to use the Online Services in violation of any laws.</li>
+        <li>You agree not to infringe on any third-party intellectual property rights.</li>
+        <li>You will not use the Online Services to share harmful, obscene, or defamatory content.</li>
+        <li>You represent that you are authorized to use the payment method provided for services.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">7. Limitation of Liability</h3>
+      <p>
+        Dealtoair and its affiliates (“Covered Parties”) are not liable for errors, omissions, interruptions, or downtime. 
+        Total liability shall not exceed the actual direct damages incurred by you. Covered Parties are not liable for indirect, incidental, or consequential damages, including attorney fees.
+      </p>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">8. Miscellaneous</h3>
+      <ul>
+        <li>Dealtoair reserves the right to modify these Terms at any time.</li>
+        <li>Charges and payment terms may change per pricing schedules.</li>
+        <li>Dealtoair may suspend or terminate access at any time for violations.</li>
+        <li>All official notices will be provided electronically or in writing.</li>
+        <li>These Terms are governed by the laws of Pennsylvania and Montgomery County.</li>
+      </ul>
+
+      <h3 class="mt-5 mb-3 text-pink fw-semibold">9. User Inactivity</h3>
+      <p>
+        Accounts inactive for more than 180 days (6 months) will be deactivated, and any earnings associated will be forfeited.
+      </p>
+
     </div>
   </div>
 </section>
-<!--Subscribe Section end-->
+<!-- Terms Section End -->
+
+
 
 <!--Footer Section start-->
-<footer class="pt-9 text-center text-white position-relative z-1">
+  <footer class="pt-9 text-center text-white position-relative z-1">
     <div class="overlay z-n1 start-0"></div>
     <div class="container">
       <div class="footer-content w-lg-50 m-auto">
@@ -354,18 +345,18 @@
       </div>
     </div>
   </footer>
-<!--Footer Section end-->  
+  <!--Footer Section end-->
 
-<!--Bacl-to-top Button start-->
+  <!--Bacl-to-top Button start-->
   <div id="back-to-top">
     <a href="#" class="bg-pink position-relative align-items-center rounded-circle d-block"></a>
   </div>
-<!--Bacl-to-top Button end-->
+  <!--Bacl-to-top Button end--> 
 
-    <script src="js/jquery-3.7.1.min.js"></script>  
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/custom-nav.js"></script>
-    <script src="js/plugin.js"></script>
-    <script src="js/main.js"></script>
+<script src="js/jquery-3.7.1.min.js"></script>  
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/custom-nav.js"></script>
+<script src="js/plugin.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
