--- a/prereg.html
+++ b/prereg.html
@@ -25,63 +25,10 @@
 <!--Header Section start-->
 <header class="main_header_area position-absolute w-100">
 
-  <div class="header-content text-white">
-    <div class="container">
-      <div class="header-content-inner py-2">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="social-links ">
-              <ul class="m-0 p-0">
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-facebook border-social rounded-circle text-center"></i>
-                  </a>               
-                </li>
-                <!-- <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-twitter border-social rounded-circle text-center"></i>
-                  </a>
-                </li> -->
-                <!-- <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-google border-social rounded-circle text-center"></i>
-                  </a>
-                </li> -->
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-instagram border-social rounded-circle text-center"></i>
-                  </a>
-                </li>
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-linkedin border-social rounded-circle text-center "></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>  
-          <div class="col-lg-6">
-            <div class="header-event-info text-end">
-              <ul class="m-0 p-0">
-                <li class="px-2 border-end border-lightgrey border-opacity-50 d-inline">
-                  <i class="fa fa-phone pe-1"></i>
-                  <small>+33 877 554 332</small></li>
-                <li class=" px-2 border-end d-inline border-lightgrey border-opacity-50">
-                  <i class="fa fa-envelope-o pe-1"></i>
-                  <small>info@website.com</small></li>
-                <li class=" px-2 d-inline ">
-                  <i class="fa fa-clock-o pe-1"></i>
-                  <small>Mon - Fri: 9:00 - 18:30</small></li>
-              </ul>
-            </div>
-          </div>  
-        </div>  
-      </div>  
-    </div>
-  </div>
+     
 
   <!-- Navigation Bar -->
-  <div class="header_menu " id="header_menu">
+  <div class="header_menu " id="header_menu" style="background-color: white;">
     <div class="container">
       <nav class="navbar navbar-expand-lg py-2">
         <div class="row">
