--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -52,7 +52,7 @@
   </div>
 
   <!-- Navigation Bar -->
-  <div class="header_menu " id="header_menu">
+  <div class="header_menu " id="header_menu" style="background-color: white;">
     <div class="container">
       <nav class="navbar navbar-expand-lg py-2">
         <div class="row">
