--- a/contact.html
+++ b/contact.html
@@ -25,66 +25,10 @@
 <!--Header Section start-->
 <header class="main_header_area position-absolute w-100">
 
-    <div class="header-content text-white">
-      <div class="container">
-        <div class="header-content-inner py-2">
-          <div class="row align-items-center">
-            <div class="col-lg-6">
-              <div class="social-links ">
-                <ul class="m-0 p-0">
-                  <li class="d-inline">
-                    <a href="#">
-                      <i class="fa fa-facebook border-social rounded-circle text-center"></i>
-                    </a>
-                  </li>
-                  <!-- <li class="d-inline">
-                    <a href="#">
-                      <i class="fa fa-twitter border-social rounded-circle text-center"></i>
-                    </a>
-                  </li> -->
-                  <!-- <li class="d-inline">
-                    <a href="#">
-                      <i class="fa fa-google border-social rounded-circle text-center"></i>
-                    </a>
-                  </li> -->
-                  <li class="d-inline">
-                    <a href="#">
-                      <i class="fa fa-instagram border-social rounded-circle text-center"></i>
-                    </a>
-                  </li>
-                  <li class="d-inline">
-                    <a href="#">
-                      <i class="fa fa-linkedin border-social rounded-circle text-center "></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="header-event-info text-end">
-                <ul class="m-0 p-0">
-                  <li class="px-2 border-end border-lightgrey border-opacity-50 d-inline">
-                    <i class="fa fa-phone pe-1"></i>
-                    <small>+33 877 554 332</small>
-                  </li>
-                  <li class=" px-2 border-end d-inline border-lightgrey border-opacity-50">
-                    <i class="fa fa-envelope-o pe-1"></i>
-                    <small>info@website.com</small>
-                  </li>
-                  <li class=" px-2 d-inline ">
-                    <i class="fa fa-clock-o pe-1"></i>
-                    <small>Mon - Fri: 9:00 - 18:30</small>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+      
 
     <!-- Navigation Bar -->
-    <div class="header_menu " id="header_menu">
+    <div class="header_menu " id="header_menu" style="background-color: white;">
       <div class="container">
         <nav class="navbar navbar-expand-lg py-2">
           <div class="row">
@@ -312,15 +256,18 @@
 <!--Subscribe Section end-->
 
 <!--Footer Section start-->
-<footer class="pt-9 text-center text-white position-relative z-1">
+  <footer class="pt-9 text-center text-white position-relative z-1">
     <div class="overlay z-n1 start-0"></div>
     <div class="container">
-      <div class="footer-content w-lg-50 m-auto">
-        <div class="footer-logo mb-4 pt-1">
+      <div class="footer-content row w-lg-100 m-auto border-bottom border-white border-opacity-25 mb-6">
+        <div class="col-lg-6">
+        <div class="footer-logo mb-8 pt-1">
           <a href="index.html"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
         </div>
-        <div class="footer-disciption border-bottom border-white border-opacity-25 m-auto mb-6">
-          <p class=" mb-6">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
+        <p class=" mb-6">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
+        </div>
+        <div class="col-lg-6">
+        <div class="footer-disciption  m-auto mb-6">
           <div class="footer-socials pb-6">
             <ul class="m-0 p-0">
               <li class="d-inline me-2">
@@ -343,18 +290,19 @@
         </div>
         <div class="footer-menu pb-9">
           <ul class="p-0 m-0">
-            <li class="d-inline mx-2"><a href="privacy.html"><small>Privacy Policy</small></a></li>
-            <li class="d-inline mx-2"><a href="terms.html"><small>Terms & Conditions</small></a></li>
-            <li class="d-inline mx-2"><a href="unsubscribe.html"><small>Unsubscribe</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small>Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small>Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small>Unsubscribe</small></a></li>
           </ul>
         </div>
+      </div>
       </div>
       <div class="copyright pb-6 pt-1">
         <small>Copyright &#169;2025 DealtoAir. All Rights Reserved Copyright</small>
       </div>
     </div>
   </footer>
-<!--Footer Section end-->  
+  <!--Footer Section end-->  
 
 <!--Bacl-to-top Button start-->
   <div id="back-to-top">
