--- a/news-list.html
+++ b/news-list.html
@@ -25,63 +25,10 @@
 <!--Header Section start-->
 <header class="main_header_area position-absolute w-100">
 
-  <div class="header-content text-white">
-    <div class="container">
-      <div class="header-content-inner py-2">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="social-links ">
-              <ul class="m-0 p-0">
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-facebook border-social rounded-circle text-center"></i>
-                  </a>               
-                </li>
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-twitter border-social rounded-circle text-center"></i>
-                  </a>
-                </li>
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-google border-social rounded-circle text-center"></i>
-                  </a>
-                </li>
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-instagram border-social rounded-circle text-center"></i>
-                  </a>
-                </li>
-                <li class="d-inline">
-                  <a href="#">
-                    <i class="fa fa-youtube-play border-social rounded-circle text-center "></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>  
-          <div class="col-lg-6">
-            <div class="header-event-info text-end">
-              <ul class="m-0 p-0">
-                <li class="px-2 border-end border-lightgrey border-opacity-50 d-inline">
-                  <i class="fa fa-phone pe-1"></i>
-                  <small>+33 877 554 332</small></li>
-                <li class=" px-2 border-end d-inline border-lightgrey border-opacity-50">
-                  <i class="fa fa-envelope-o pe-1"></i>
-                  <small>info@website.com</small></li>
-                <li class=" px-2 d-inline ">
-                  <i class="fa fa-clock-o pe-1"></i>
-                  <small>Mon - Fri: 9:00 - 18:30</small></li>
-              </ul>
-            </div>
-          </div>  
-        </div>  
-      </div>  
-    </div>
-  </div>
+   
 
   <!-- Navigation Bar -->
-  <div class="header_menu " id="header_menu">
+  <div class="header_menu " id="header_menu" style="background-color: white;">
     <div class="container">
       <nav class="navbar navbar-expand-lg py-2">
         <div class="row">
@@ -90,7 +37,7 @@
               <a href="./"><img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100"></a>
             </div>
           </div>  
-          <div class="col-lg-10 col-md-6">
+          <!-- <div class="col-lg-10 col-md-6">
             <div class="collapse navbar-collapse justify-content-between ms-8 " id="bs-example-navbar-collapse-1">
               <ul class="navbar-nav align-items-center" id="responsive-menu">
                 <li class="nav-item ">
@@ -154,7 +101,7 @@
                   <a class="btn btn3" href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
               </div>
               </div>  
-            </div>
+            </div> -->
         <div id="slicknav-mobile"></div>
         </div>
       </nav>
@@ -178,7 +125,7 @@
   </div>
   <div class="container">
     <div class="page-title text-center position-relative py-11">
-     <h2 class="text-white">Archives</h2>
+     <h2 class="text-white">Blog Archives</h2>
     </div> 
   </div>
 </section>
@@ -189,7 +136,7 @@
   <div class="container">
     <div class="news-archive-inner">
       <div class="row gy-5">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
           <div class="news-left me-4 m-md-0">
             <div class="row g-md-5 gy-5">
               <div class="col-lg-6 col-md-6">
@@ -297,7 +244,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <!-- <div class="col-lg-4">
           <div class="news-right ms-4 m-md-0">
             <div class="about-organizer p-6 box-shadow rounded text-center mb-6">
               <div class="organizer-title mb-3">
@@ -422,7 +369,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -431,28 +378,28 @@
 
 
 <!--Subscribe Section start-->
-<section class="subscribe py-4">
-  <div class="container">
-    <div class="subscribe-content">
-      <div class="row">
-        <div class="col-lg-6 align-self-center ">
-          <div class="sub-left text-center text-lg-start py-2">
-            <h4 class="text-white ">DON'T MISS OUR FUTURE UPDATES! GET SUBSCRIBED TODAY!</h4>
+  <section class="subscribe py-4">
+    <div class="container">
+      <div class="subscribe-content">
+        <div class="row">
+          <div class="col-lg-12 align-items-center ">
+            <div class="sub-left text-center py-2">
+              <h4 class="text-white ">Haven’t Entered Yet? Join the Sweepstakes Now!</h4>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="sub-right py-2">
-            <p class="text-white mb-4 text-center text-lg-start"> Excepteur sint occaecat cupidatat non proident, sunt
-              in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="row gy-3">
-              <div class="col-lg-8 col-md-8 ">
-                <div class="sub-email">
-                  <input type="email" placeholder="Email" required>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-4">
-                <div class="sub-button">
-                  <button class="btn btn3 w-100">SUBSCRIBE</button>
+          <div class="col-lg-12 align-items-center">
+            <div class="sub-right py-2">
+              <p class="text-white mb-4 text-center "> Your chance to win exclusive prizes is just one step away. Don’t wait – every entry counts, and today could be your lucky day. <br> Secure your spot before the clock runs out!</p>
+              <div class="row gy-3 align-items-center justify-content-center">
+                <!-- <div class="col-lg-8 col-md-8 ">
+                  <div class="sub-email">
+                    <input type="email" placeholder="Email" required>
+                  </div>
+                </div> -->
+                <div class="col-lg-4 col-md-4">
+                  <div class="sub-button">
+                    <a href="prereg.html"><button class="btn btn3 w-100">Enter & Win Now</button></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -460,63 +407,57 @@
         </div>
       </div>
     </div>
-  </div>
-</section>
-<!--Subscribe Section end-->
+  </section>
+  <!--Subscribe Section end-->
 
 <!--Footer Section start-->
-<footer class="pt-9 text-center text-white position-relative z-1">
-  <div class="overlay z-n1 start-0"></div>
-  <div class="container">
-    <div class="footer-content w-lg-50 m-auto">
-      <div class="footer-logo mb-4 pt-1">
-        <a href="index.html"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
-      </div>
-      <div class="footer-disciption border-bottom border-white border-opacity-25 m-auto mb-6">
-        <p class=" mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore.</p>
-        <div class="footer-socials pb-6">
-          <ul class="m-0 p-0">
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-youtube-play"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </li>
+  <footer class="pt-9 text-center text-white position-relative z-1">
+    <div class="overlay z-n1 start-0"></div>
+    <div class="container">
+      <div class="footer-content row w-lg-100 m-auto border-bottom border-white border-opacity-25 mb-6">
+        <div class="col-lg-6">
+        <div class="footer-logo mb-8 pt-1">
+          <a href="index.html"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
+        </div>
+        <p class=" mb-6">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
+        </div>
+        <div class="col-lg-6">
+        <div class="footer-disciption  m-auto mb-6">
+          <div class="footer-socials pb-6">
+            <ul class="m-0 p-0">
+              <li class="d-inline me-2">
+                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </li>
+              <li class="d-inline me-2">
+                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                  <i class="fa fa-instagram"></i>
+                </a>
+              </li>
+              <li class="d-inline me-2">
+                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-menu pb-9">
+          <ul class="p-0 m-0">
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small>Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small>Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small>Unsubscribe</small></a></li>
           </ul>
         </div>
       </div>
-      <div class="footer-menu pb-9">
-        <ul class="p-0 m-0">
-          <li class="d-inline mx-2"><a href="about.html"><small>About Event</small></a></li>
-          <li class="d-inline mx-2"><a href=""><small>Services</small></a></li>
-          <li class="d-inline mx-2"><a href="speaker_list.html"><small>Speakers</small></a></li>
-          <li class="d-inline mx-2"><a href="event_list.html"><small>Schedule</small></a></li>
-          <li class="d-inline mx-2"><a href="pricing.html"><small>Ticket Pricing</small></a></li>
-          <li class="d-inline mx-2"><a href="contact.html"><small>Contact Us</small></a></li>
-        </ul>
+      </div>
+      <div class="copyright pb-6 pt-1">
+        <small>Copyright &#169;2025 DealtoAir. All Rights Reserved Copyright</small>
       </div>
     </div>
-    <div class="copyright pb-6 pt-1">
-      <small>Copyright &#169;2024 Eventen. All Rights Reserved Copyright</small>
-    </div>
-  </div>
-</footer>
-<!--Footer Section end--> 
+  </footer>
+  <!--Footer Section end--> 
 
 <!--Bacl-to-top Button start-->
 <div id="back-to-top">
