--- a/coreg.html
+++ b/coreg.html
@@ -134,29 +134,35 @@
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="banner-right  ms-2 text-center text-lg-start pb-8">
               <div class="banner-title pb-3">
-                <h4 class="text-white pb-3">UPCOMING NEW <span class="pink">EVENT</span> 2023</h4>
-                <h1 class="text-white">STARTUP <span class="pink">GLOBAL</span> CONFERENCE</h1>
+                <h4 class="text-white pb-3">Fast Payments, <span class="text-blue">More Freedom</span> </h4>
+                <h1 class="text-white">Get rewarded quicker with <span class="text-blue">flexible</span> payouts.</h1>
               </div>
               <div class="banner-event-info pb-3">
                 <ul class="m-0 ps-0 d-sm-flex justify-content-center justify-content-lg-start list-unstyled">
-                  <li class="pe-2 border-end border-1 border-lightgrey">
-                    <i class="fa  fa-calendar-o pe-1"></i> 22-24 MAY 2024
+                  <li class="pe-2 ">
+                    <i class="fa  fa-calendar-o pe-1"></i> 22-24 OCT 2024
                   </li>
+                  <br>
                   <li class="ps-2">
-                    <i class="fa  fa-map-marker pe-1"></i> QUEENBAY MALL 4217 ROAD, USA
+                    <i class="fa  fa-map-marker pe-1"></i> All Over Globe
                   </li>
                 </ul>
               </div>
+              <ul class="p-0 mb-5">
+            <li class=" fw-semibold mx-2 mb-1" style="list-style: none; font-size: larger;"><i class="fa  fa-check-circle pe-4"></i><small>NET-15 & NET-7 payments available</small></li>
+            <li class=" fw-semibold mx-2 mb-1" style="list-style: none; font-size: larger;"><i class="fa  fa-check-circle pe-4"></i><small>High-quality traffic = faster rewards</small></li>
+            <li class=" fw-semibold mx-2" style="list-style: none; font-size: larger;"><i class="fa  fa-check-circle pe-4"></i><small>Reliable & transparent transactions</small></li>
+          </ul>
               <div class="event-discription">
-                <p class="pb-4 m-0">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.</p>
+                <!-- <p class="pb-4 m-0">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</p> -->
                 <div class="banner-button">
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
-                      <a class="btn me-3 my-1 w-100" href="offerwall.html">PURCHASE TICKET</a>
+                      <a class="btn btn2 my-1 w-100" href="offerwall.html">VIEW SCHEDULE</a>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                      <a class="btn btn2 my-1 w-100" href="offerwall.html">VIEW SCHEDULE</a>
+                      <a class="btn me-3 my-1 w-100" href="offerwall.html">PURCHASE TICKET</a>
                     </div> 
                   </div>
                 </div>
