--- a/offerwall.html
+++ b/offerwall.html
@@ -238,7 +238,7 @@
       <div class="footer-content row w-lg-100 m-auto border-bottom border-white border-opacity-25 mb-6">
         <div class="col-lg-6">
         <div class="footer-logo mb-8 pt-1">
-          <a href="index.html"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
+             <a href="./"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
         </div>
         <p class=" mb-6">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
         </div>
