--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Co-Registration | DealtoAir</title>
+  <title>Unsubscribe | Dealtoair</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,161 +14,222 @@
   <!--Custom CSS-->
   <link rel="stylesheet" href="css/styles.css">
 
-  <!--FontAwesome CSS-->
+  <!-- FontAwesome -->
   <link rel="stylesheet" href="icons/font-awesome.min.css">
 </head>
 <body>
-<!--Header Section start-->
+  <!--Header Section start-->
 <header class="main_header_area position-absolute w-100">
 
-  <div class="header-content text-white">
-    <div class="container">
-      <div class="header-content-inner py-2">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="social-links ">
-              <ul class="m-0 p-0">
-                <li class="d-inline"><a href="#"><i class="fa fa-facebook border-social rounded-circle text-center"></i></a></li>
-                <li class="d-inline"><a href="#"><i class="fa fa-twitter border-social rounded-circle text-center"></i></a></li>
-                <li class="d-inline"><a href="#"><i class="fa fa-google border-social rounded-circle text-center"></i></a></li>
-                <li class="d-inline"><a href="#"><i class="fa fa-instagram border-social rounded-circle text-center"></i></a></li>
-                <li class="d-inline"><a href="#"><i class="fa fa-youtube-play border-social rounded-circle text-center"></i></a></li>
-              </ul>
-            </div>
-          </div>  
-          <div class="col-lg-6">
-            <div class="header-event-info text-end">
-              <ul class="m-0 p-0">
-                <li class="px-2 border-end border-lightgrey border-opacity-50 d-inline"><i class="fa fa-phone pe-1"></i><small>+33 877 554 332</small></li>
-                <li class="px-2 border-end d-inline border-lightgrey border-opacity-50"><i class="fa fa-envelope-o pe-1"></i><small>info@website.com</small></li>
-                <li class="px-2 d-inline"><i class="fa fa-clock-o pe-1"></i><small>Mon - Fri: 9:00 - 18:30</small></li>
-              </ul>
-            </div>
-          </div>  
-        </div>  
-      </div>  
-    </div>
-  </div>
+      
 
-  <!-- Navigation Bar -->
-  <div class="header_menu " id="header_menu" style="background-color: white;">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg py-2">
-        <div class="row">
-          <div class="col-lg-2 col-md-6">
+    <!-- Navigation Bar -->
+    <div class="header_menu " id="header_menu" style="background-color: white;">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg py-2">
+          <div class="row">
+            <div class="col-lg-2 col-md-6">
             <div class="navbar-brand m-0">
               <a href="./"><img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100"></a>
             </div>
           </div>
-          <div id="slicknav-mobile"></div>
-        </div>
-      </nav>
-    </div> 
-  </div>
-</header>
+            <!-- <div class="col-lg-7 col-md-6 ">
+              <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+                <ul class="navbar-nav align-items-center" id="responsive-menu">
+                  <li class="nav-item ">
+                    <a class="nav-link px-2 my-4 py-0 text-white" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link px-2 my-4 py-0 text-white" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-2 my-4 py-0 text-white" href="#" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Speaker
+                    </a>
+                    <ul class="dropdown-menu bg-lightgrey p-0 rounded">
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="speaker_list.html">Speakers List</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="speaker_detail.html">Speakers Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-2 my-4 py-0 text-white" href="#" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Schedule
+                    </a>
+                    <ul class="dropdown-menu bg-lightgrey p-0 rounded">
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="event_list.html">Event List</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="event-detail.html">Event Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-2 my-4 py-0 text-white" href="#" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Pages
+                    </a>
+                    <ul class="dropdown-menu bg-lightgrey p-0 rounded">
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="sponsers.html">Sponsors</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="gallery.html">Gallery</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="pricing.html">Pricing</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0" href="faq.html">Faq</a>
+                      </li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="testimonial.html">Testimonials</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="product-list.html">Product List</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="product-single.html">Product Single</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0" href="error.html">404
+                          Error</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="search-result.html">Search Result</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="coming-soon.html">Coming Soon</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle px-2 my-4 py-0 text-white" href="#" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      News
+                    </a>
+                    <ul class="dropdown-menu bg-lightgrey p-0 rounded">
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="news-list.html">News List</a></li>
+                      <li><a class="dropdown-item py-3 px-6 text-capitalize black border-0"
+                          href="news-single.html">News Single</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link px-2 my-4 py-0 text-white" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div> -->
+            <!-- <div class="col-lg-3">
+              <div class="menu-search">
+                <a href="#search1" class="mt_search">
+                  <i class="fa fa-search fa-lg me-5 text-white"></i>
+                </a>
+                <a class="btn btn3"  href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
+              </div>
+            </div> -->
+            <div id="slicknav-mobile"></div>
+          </div>
+        </nav>
+      </div>
+      <div id="search1">
+        <button type="button" class="close">×</button>
+        <form>
+          <input class="form-control form-control-lg rounded text-white" placeholder="Search...">
+        </form>
+        <button type="button" class="btn"><i class="fa fa-search text-white" aria-hidden="true"></i></button>
+      </div>
+
+    </div>
+    <!-- Navigation Bar Ends -->
+  </header>
 <!-- Header section ends -->
 
-<!-- Banner Section -->
-<section class="banner position-relative pb-0" style="height: 500px;">
+<!-- Bannner section starts -->
+<section class="banner page-banner position-relative pb-0">
   <div class="overlay"></div>
   <div class="container">
-    <div class="inner-banner position-relative text-white text-center py-5">
-      <h1 class="text-white">Welcome to DealtoAir</h1>
-      <p class="lead">Exclusive Co-Registration Offers Just for You</p>
-    </div>
+    <div class="page-title text-center position-relative py-11">
+      <h2 class="text-white">Unsubscribe</h2>
+    </div> 
   </div>
 </section>
-<!-- Banner Section End -->
+<!--Banner Section end--> 
 
-<!-- Offer Carousel Section -->
-<section class="offers py-5 ">
-  <div class="container">
-    <div id="offer-container" class="text-center">
-      <!-- Offer content will be injected by JS -->
-    </div>
-  </div>
-</section>
+  <!-- Unsubscribe Form Section -->
+  <section class="unsubscribe-section py-6">
+    <div class="container">
+      <div class="row justify-content-center m-8">
+        <div class="col-lg-6">
+          <div class="card shadow p-5 border-0 rounded-4">
+            <h3 class="text-center mb-4 fw-bold">We're sorry to see you go</h3>
+            <p class="text-center text-muted mb-4">
+              Enter your email address below to unsubscribe from future communications.
+            </p>
 
-<!-- Back-to-top Button start -->
-<div id="back-to-top">
-  <a href="#" class="bg-pink position-relative align-items-center rounded-circle d-block"></a>
-</div>
-<!-- Back-to-top Button end -->
+            <form action="unsubscribe.php" method="POST">
+              <div class="mb-3">
+                <label for="email" class="form-label fw-semibold">Email Address</label>
+                <input type="email" class="form-control p-3 rounded-3" id="email" name="email" placeholder="your@email.com" required>
+              </div>
 
-<script src="js/jquery-3.7.1.min.js"></script>  
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/custom-nav.js"></script>
-<script src="js/plugin.js"></script>
-<script src="js/main.js"></script>
+              
 
-<script>
-  // Offers Array
-  const offers = [
-    {
-      img: "images/offers/offer1.png",
-      title: "Special Offer 1",
-      desc: "Get 20% off on your first subscription!",
-      yesText: "Yes, Claim Offer",
-      noText: "No, Skip",
-      yesLink: "https://example.com/offer1",
-      noLink: ""
-    },
-    {
-      img: "images/offers/offer2.png",
-      title: "Special Offer 2",
-      desc: "Win a free gift card by joining today!",
-      yesText: "Yes, Enter",
-      noText: "No, Maybe Later",
-      yesLink: "https://example.com/offer2",
-      noLink: ""
-    },
-    {
-      img: "images/offers/offer3.png",
-      title: "Special Offer 3",
-      desc: "Exclusive access to our premium features!",
-      yesText: "Yes, Unlock Now",
-      noText: "No, Thanks",
-      yesLink: "https://example.com/offer3",
-      noLink: ""
-    }
-  ];
+              <div class="d-grid">
+                <button type="submit" class="btn btn-danger btn-lg rounded-3">Unsubscribe Me</button>
+              </div>
+            </form>
 
-  let currentOffer = 0;
-
-  function renderOffer(index) {
-    if (index >= offers.length) {
-      document.getElementById("offer-container").innerHTML =
-        `<div class="p-5">
-           <h2 class="text-success">🎉 Thank You!</h2>
-           <p>You’ve completed all offers.</p>
-         </div>`;
-      return;
-    }
-
-    const offer = offers[index];
-    document.getElementById("offer-container").innerHTML = `
-      <div class="card shadow p-4 mx-auto" style="max-width:600px;">
-        <img src="${offer.img}" class="w-50 mx-auto mb-3" alt="Offer Image">
-        <h3 class="mb-3">${offer.title}</h3>
-        <p class="mb-4">${offer.desc}</p>
-        <div class="d-flex justify-content-center gap-3">
-          <button class="btn btn-success px-4" onclick="nextOffer('${offer.yesLink}')">${offer.yesText}</button>
-          <button class="btn btn-danger px-4" onclick="nextOffer('${offer.noLink}')">${offer.noText}</button>
+            <p class="text-center text-muted mt-4" style="font-size: 14px;">
+              You will be removed from our mailing list. It may take up to 48 hours for changes to take effect.
+            </p>
+          </div>
         </div>
       </div>
-    `;
-  }
+    </div>
+  </section>
 
-  function nextOffer(link) {
-    if (link) {
-      window.open(link, "_blank"); // open yes-link in new tab
-    }
-    currentOffer++;
-    renderOffer(currentOffer);
-  }
+  <!--Footer Section start-->
+  <footer class="pt-9 text-center text-white position-relative z-1">
+    <div class="overlay z-n1 start-0"></div>
+    <div class="container">
+      <div class="footer-content row w-lg-100 m-auto border-bottom border-white border-opacity-25 mb-6">
+        <div class="col-lg-6">
+        <div class="footer-logo mb-8 pt-1">
+             <a href="./"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
+        </div>
+        <p class=" mb-6">Join thousands of winners and claim your chance to win amazing prizes, gift vouchers, and special offers – updated daily!</p>
+        </div>
+        <div class="col-lg-6">
+        <div class="footer-disciption  m-auto mb-6">
+          <div class="footer-socials pb-6">
+            <ul class="m-0 p-0">
+              <li class="d-inline me-2">
+                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </li>
+              <li class="d-inline me-2">
+                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                  <i class="fa fa-instagram"></i>
+                </a>
+              </li>
+              <li class="d-inline me-2">
+                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-menu pb-9">
+          <ul class="p-0 m-0">
+            <li class=" mx-2" style="list-style: none;"><a href="privacy.html"><small>Privacy Policy</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="terms.html"><small>Terms & Conditions</small></a></li>
+            <li class=" mx-2" style="list-style: none;"><a href="unsubscribe.html"><small>Unsubscribe</small></a></li>
+          </ul>
+        </div>
+      </div>
+      </div>
+      <div class="copyright pb-6 pt-1">
+        <small>Copyright &#169;2025 DealtoAir. All Rights Reserved Copyright</small>
+      </div>
+    </div>
+  </footer>
+  <!--Footer Section end-->
 
-  // Initialize first offer
-  renderOffer(currentOffer);
-</script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
